--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
